--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^20.5.6",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
   }
