--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -1,11 +1,6 @@
 name: Docker Build and Push
 
-on:
-  workflow_dispatch:
-    inputs:
-      branch:
-        description: Branch to build and push
-        required: true
+on: workflow_dispatch
 
 jobs:
   build-and-push:
@@ -24,5 +19,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
+          platforms: linux/amd64,linux/arm/v7,linux/arm64,linux/arm/v6
           push: true
           tags: mxmlndml/hello-world-docker:latest
