--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -19,6 +19,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          platforms: linux/amd64,linux/arm/v7,linux/arm64,linux/arm/v6
+          platforms: linux/arm/v7,linux/arm64
           push: true
           tags: mxmlndml/hello-world-docker:latest
