--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -7,7 +7,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup Docker Buildx
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
@@ -19,6 +25,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: .
           platforms: linux/arm/v7,linux/arm64
           push: true
           tags: mxmlndml/hello-world-docker:latest
