--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Docker meta
+        id: meta
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY_IMAGE }}
