--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -15,9 +15,10 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          # - linux/amd64
+          - linux/amd64
+          - linux/arm/v6
           - linux/arm/v7
-          # - linux/arm64
+          - linux/arm64
 
     steps:
       - name: Checkout
@@ -99,4 +100,4 @@ jobs:
 
       - name: Inspect image
         run: |
-          imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
