--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rimraf ./dist && tsc",
-    "start": "pnpm build && node ."
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
